# meshtopo

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  Makefile  README.md  bandit-report.json  caltopo_reporter.py  config.py  config.yaml.example  design.md  docker-compose.yml  fix.py  gateway.py  gateway_app.py  install.sh  meshtopo-azure_migrate_to_litestream.yaml  meshtopo.service  migrate_to_litestream.md  mqtt_client.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements-web.txt  requirements.txt  test_fernet.py  test_gateway.py  test_mode_validation.py
.beads/: issues.jsonl
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  pr-analysis.yml  pr-lint.yml  pre-commit-autoupdate.yml  release.yml
.jules/: bolt.md  sentinel.md
.mypy_cache/3.9/: codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  posixpath.data.json  posixpath.meta.json  re.data.json  re.meta.json  resource.data.json  resource.meta.json  sre_compile.data.json  sre_compile.meta.json  sre_constants.data.json  sre_constants.meta.json  sre_parse.data.json  sre_parse.meta.json  subprocess.data.json  subprocess.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
.mypy_cache/3.9/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.9/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
.mypy_cache/3.9/importlib/: __init__.data.json  __init__.meta.json  _bootstrap.data.json  _bootstrap.meta.json  _bootstrap_external.data.json  _bootstrap_external.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json
.mypy_cache/3.9/importlib/metadata/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.9/pathlib/: __init__.data.json  __init__.meta.json
.mypy_cache/3.9/sys/: __init__.data.json  __init__.meta.json
.templates/: changelog.md.j2
assets/: README.md
assets/images/: Meshtopo-logo.xcf
config/: README.md  config.py  config.yaml.basic  config.yaml.docker  config.yaml.example  config.yaml.minimal  config.yaml.production  mosquitto.conf.example
deploy/: .env.example  .env.integration  Caddyfile  Dockerfile  Dockerfile.web  README.md  docker-compose-minimal.yaml  docker-compose-mqtt.yml  docker-compose-server.yaml  docker-compose-unraid.yaml  docker-compose.integration.yml  docker-compose.simple.yml  docker-compose.yml  env.example  meshtopo.service  mosquitto.conf  mosquitto.conf.template  passwd
docs/: CONTRIBUTING.md  V2_REFACTOR_LOG.md  architecture.md  authentication.md  design.md  docker-testing-strategy.md  engineering_review.md  engineering_review_status.md  meshtastic_node_configuration.md
docs/api/: caltopo_reporter.md  config.md  gateway.md  gateway_app.md  mqtt_client.md  persistent_dict.md  utils.md
reviews/: REVIEW_STATUS.md  Security Audit Report.md  code_review.md  map_updates_bug.md  review-1765700805.md  review-1765834673.md  review_security_audit.md  review_src_20251213.md
scripts/: entrypoint.sh  generate_docs.py  generate_mosquitto_config.py  install.sh  setup_broker.sh  setup_wizard.py  user_manager.py
src/: __init__.py  caltopo_reporter.py  gateway.py  gateway_app.py  mqtt_client.py  persistent_dict.py  test_gateway.py  utils.py
src/config/: config.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: admin.html  config.html  layout.html  login.html  status.html
src/web/: __init__.py  auth.py  keys.py  routes.py  views.py
src/web_ui/: __init__.py  app.py
src/web_ui/models/: config.py  user.py
src/web_ui/routes/: api.py  auth.py  maps.py  users.py
src/web_ui/services/: caltopo_api.py  oauth_client.py
src/web_ui/templates/: base.html  login.html  maps.html  status.html  users.html
src/web_ui/utils/: password.py
tests/: __init__.py  conftest.py  run_tests.py  test_auth_exclusivity.py  test_authentication.py  test_caltopo_modes.py  test_caltopo_reporter.py  test_config.py  test_config_logging.py  test_config_methods.py  test_coverage_edge_cases.py  test_flask_app.py  test_gateway.py  test_gateway_app.py  test_gateway_main.py  test_mqtt_client.py  test_mqtt_topic_format.py  test_multi_tenant_routing.py  test_multi_tenant_views.py  test_password_utils.py  test_persistent_dict.py  test_redaction.py  test_simple_auth.py  test_user_management.py  test_user_manager.py  test_utils.py  test_web_auth.py  test_web_views.py
tests/integration/: Dockerfile  conftest.py  mock_server.py  test_integration.py
