[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtopo"
version = "0.1.0"
description = "Meshtastic to CalTopo Gateway Service"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Clayton Auld", email = "clayton@clayauld.com"}
]
keywords = ["meshtastic", "caltopo", "mqtt", "gateway", "lora", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking",
]

dependencies = [
    "aiomqtt==2.1.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "pydantic==2.12.5",
    "bcrypt==5.0.0",
    "requests==2.32.5",
    "python-gitlab==6.5.0",
    "requests-toolbelt==1.0.0",
    "shellingham==1.5.4",
    "tomlkit==0.13.3",
    "rich==14.2.0",
    "deprecated==1.3.1",
    "dotty-dict==1.3.1",
    "gitpython==3.1.45",
]

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "flake8>=7.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio==1.2.0",
    "pytest-html>=3.2.0",
    "pytest-json-report>=1.5.0",
    "pre-commit>=3.0.0",
    "paho-mqtt>=2.0.0",
    "python-semantic-release>=9.0.0",
    "bandit>=1.7.0",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
meshtopo = "gateway:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["config", "mqtt_client", "caltopo_reporter", "gateway_app"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "paho.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
commit_version_number = true
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"

[tool.semantic_release.changelog]
template_dir = ".templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
